# rdmNames

./: .gitignore  10mnomes.py  MANIFEST.in  README.md  generate_names.py  pyproject.toml  setup.py
examples/: generate_million_names.py
rdmNames/: __init__.py
