[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rdmnames"
version = "1.0.0"
description = "Uma biblioteca otimizada para geração de nomes aleatórios"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Near Skys", email = "nearskysgithub@gmail.com"}
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "black"]
